1.3-24

* "cr" basis constructor modified to use the same centering conditions 
  as other bases (sum to zero over covariates, rather than parameters 
  sum to zero). This makes centred confidence intervals for smooths, of 
  the sort used in plot.gam, behave in a similar way for all bases. With 
  the old "cr" centering constraint there could be high negative 
  correlation between coefficients of a centered smooth and the intercept: 
  this could make centred "cr" smooth CIs wider than CIs for other bases 
  (not really wrong, but disconcerting).  

1.3-23

* step size correction bug fixed in gam.fit3. `Perfect' convergence could
  cause the divergence control loop to fail: the divergence control loop
  was asking for near strict decrease in the penalized deviance, which 
  could be numerically impossible to achieve if the algorithm had actually 
  converged completely.... fixed.  

* minor doc bug fixes.


1.3-22

* Cheap but unneccesary code added to gdi.c and magic.c to stop 
  inappropriate uninitialized variable warnings from some compilers.

* Bad bug in gam.fit3 fixed. Prior weights of zero were not handled 
  correctly - prior weight vector should have been subsetted before
  gdi call, but this didn't happen. Result was infinite derivatives
  and fit failure. fixed.

* Related bug in gam.fit3: dropped observations not handled correctly 
  in deviance calculation, which can result in inappropriate step 
  halving. fixed.

* inner loop 3 in gam.fit2 and gam.fit3 modified so that step halving 
  continues until penalized deviance is at worst non-increasing. 

* stupid bug in summary.gam, p-value calc. fixed.

1.3-21

* minor bug in gam.fit() - edf array not passed to `mgcv.find.theta'
  if method "perf.magic" used - so wrong EDF used for theta estimation 
  with neagative binomial. fixed. 

* Theta estimate added to family object of fitted gam if negative binomial 
  used...

* extract.lme.cov(2) modified to allow use with single level grouping 