@@ -70,7 +70,12 @@ Pinheiro J.C. and Bates, D.M. (2000) Mixed effects Models in S and S-PLUS. Sprin
 For details of how GAMMs are set up here for estimation using \code{lme} see:
  
 Wood, S.N. (2006) Low rank scale invariant tensor product smooths for
-Generalized Additive Mixed Models. Biometrics
+Generalized Additive Mixed Models. Biometrics 62(4):1025-1036
+
+or 
+
+Wood S.N. (2006) Generalized Additive Models: An Introduction with R. Chapman
+and Hall/CRC Press.
 
 \url{http://www.maths.bath.ac.uk/~sw283/}
 }
